<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/margin_small">

    <ImageView
        android:id="@+id/iv_image"
        style="@style/RecyclerViewSmallImage"
        android:transitionName="@string/transition_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/CustomItemTitle.Small"
        android:layout_margin="@dimen/margin_small"
        android:transitionName="@string/transition_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Ad Astra Ad Astra Ad Astra Ad Astra dvf" />

    <TextView
        android:id="@+id/tv_popularity_title"
        style="@style/SmallText.Bright"
        android:layout_marginTop="@dimen/margin_rv_small"
        android:text="@string/popularity"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_popularity"
        style="@style/SmallText.Bright"
        android:layout_marginStart="@dimen/margin_rv_tiny"
        app:layout_constraintBottom_toBottomOf="@+id/tv_popularity_title"
        app:layout_constraintStart_toEndOf="@+id/tv_popularity_title"
        tools:text="6.7" />

</androidx.constraintlayout.widget.ConstraintLayout>