<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.PersonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Poster -->
        <ImageView
            android:id="@+id/iv_image"
            style="@style/LargePoster"
            android:transitionName="@string/transition_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_transparent_navigation_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                android:paddingTop="@dimen/padding_fragment_default">

                <!-- Title -->
                <TextView
                    android:id="@+id/tv_name"
                    style="@style/CustomItemTitle"
                    android:transitionName="@string/transition_name"
                    app:layout_constraintEnd_toStartOf="@+id/btn_favorites"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Ad Astra Ad Astra Ad Astra Astra Ad Astra" />

                <!-- Button add to favorites -->
                <ImageView
                    android:id="@+id/btn_favorites"
                    style="@style/ImageViewButton"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_favorites_add"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Popularity block -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:gravity="center"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_popularity"
                    style="@style/LargeMediumText"
                    tools:text="6.7" />

                <TextView
                    style="@style/SmallText.Light"
                    android:text="@string/popularity" />

            </LinearLayout>

            <TextView
                style="@style/SmallTitle"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/known_for" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies_known_for"
                style="@style/HorizontalRecyclerView"
                android:clipToPadding="false"
                android:paddingHorizontal="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_rv_horizontal" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>